--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
 
     defaultConfig {
         applicationId "com.example.cloneicaller"
@@ -29,6 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
     implementation 'io.michaelrocks:libphonenumber-android:8.11.1'
