--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
     implementation 'io.michaelrocks:libphonenumber-android:8.11.1'
     testImplementation 'junit:junit:4.12'
