--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
