--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url 'http://dl.bintry.com/amulyakhare/maven'
+        }
     }
 }
 
