--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
 
         </activity>
         <activity
+            android:name=".DetailDiaryActivity"
+            android:theme="@style/NoActionBar" />
+        <activity
             android:name=".PermissionActivity"
             android:theme="@style/NoActionBar" />
         <activity
