--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
     package="com.example.cloneicaller">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +15,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"
+        <activity android:name=".BlockActivity"
+            android:theme="@style/NoActionBar"></activity>
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/NoActionBar"></activity>
+        <activity
+            android:name=".DetailDiaryActivity"
+            android:theme="@style/NoActionBar"></activity>
+        <activity
+            android:name=".PermissionActivity"
             android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,21 +38,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
-            android:theme="@style/NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".PermissionActivity"
-            android:theme="@style/NoActionBar" />
-        <activity
             android:name=".WellcomeActivity"
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/NoActionBar">
-
-        </activity>
+            android:theme="@style/NoActionBar"></activity>
     </application>
 
 </manifest>
