--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-      
-        <activity android:name=".IntroduceActivity"
+
+        <activity
+            android:name=".IntroduceActivity"
             android:theme="@style/NoActionBar"></activity>
         <activity
             android:name=".QuestionActivity"
@@ -56,22 +57,18 @@
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".PermissionActivity"
-            android:theme="@style/NoActionBar" >
-        </activity>
+            android:theme="@style/NoActionBar"></activity>
         <activity
             android:name=".WellcomeActivity"
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoActionBar" />
-    </application>
 
         <receiver android:name=".CallStateReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
-
-
     </application>
 </manifest>
