--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
     implementation 'io.michaelrocks:libphonenumber-android:8.11.1'
     implementation 'androidx.wear:wear:1.0.0'
@@ -63,4 +62,20 @@ dependencies {
     //room
     implementation "androidx.room:room-runtime:2.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:2.1.0"
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
