--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-feature android:name="android.hardware.type.watch" />
-    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE"
+
+    <uses-permission
+        android:name="android.permission.MODIFY_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -30,11 +32,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/Theme.Design.Light.NoActionBar">
+        <activity android:name=".FilterSearchActivity"></activity>
         <activity
             android:name=".IntroduceActivity"
-            android:theme="@style/NoActionBar"></activity>
+            android:theme="@style/NoActionBar" />
         <activity
             android:name=".QuestionActivity"
             android:theme="@style/NoActionBar" />
@@ -61,18 +63,13 @@
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".PermissionActivity"
-            android:theme="@style/NoActionBar"></activity>
+            android:theme="@style/NoActionBar" />
         <activity
             android:name=".WellcomeActivity"
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoActionBar" />
-
-<!--        <receiver android:name=".CallStateReceiver" >-->
-<!--            <intent-filter android:priority="100">-->
-<!--                <action android:name="android.intent.action.PHONE_STATE" />-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
     </application>
+
 </manifest>
