--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
 
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
