--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
                 <action android:name="android.intent.action.ACTION_USER_PRESENT" />
                 <action android:name="android.intent.action.ACTION_SCREEN_ON" />
                 <action android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+                <action android:name="android.permission.ANSWER_PHONE_CALLS"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
